--- a/index.html
+++ b/index.html
@@ -103,8 +103,69 @@
                     </ul>
                </div>
           </section>
+
+          <!-- ARTICLES -->
+          <section class="articles">
+               <div class="container articles__container">
+                    <h3 class="articles__title">Latest Articles</h3>
+                    <ul class="articles__list">
+                         <li class="articles__item">
+                              <img class="articles__img" src="img/Articles img1.png" alt="">
+                              <div class="articles__inner">
+                                   <p class="articles__info">By Claire Robinson</p>
+                                   <a class="articles__link" href="#">Receive money in any<br>currency with no fees</a>
+                                   <p class="articles__text">The world is getting smaller and<br>
+                                        we’re becoming more mobile. So<br>
+                                        why should you be forced to only<br>
+                                        receive money in a single …
+                                   </p>
+                              </div>
+                         </li>
+
+                         <li class="articles__item">
+                              <img class="articles__img" src="img/Articles img2.png" alt="">
+                              <div class="articles__inner">
+                                   <p class="articles__info">By Wilson Hutton</p>
+                                   <a class="articles__link" href="#">Treat yourself without<br>worrying about money</a>
+                                   <p class="articles__text">Our simple budgeting feature<br>
+                                        allows you to separate out your<br>
+                                        spending and set realistic limits<br>
+                                        each month. That means you …
+                                   </p>
+                              </div>
+                         </li>
+
+                         <li class="articles__item">
+                              <img class="articles__img" src="img/Articles img3.png" alt="">
+                              <div class="articles__inner">
+                                   <p class="articles__info">By Wilson Hutton</p>
+                                   <a class="articles__link" href="#">Take your Easybank card<br>wherever you go</a>
+                                   <p class="articles__text">We want you to enjoy your travels.<br>
+                                        This is why we don’t charge any<br>
+                                        any fees on purchases while you’re<br>
+                                        abroad. We’ll even show you …
+                                   </p>
+                              </div>
+                         </li>
+
+                         <li class="articles__item">
+                              <img class="articles__img" src="img/Articles img4.png" alt="">
+                              <div class="articles__inner">
+                                   <p class="articles__info">By Claire Robinson</p>
+                                   <a class="articles__link" href="#">Our invite-only Beta accounts<br>are now live!</a>
+                                   <p class="articles__text">After a lot of hard work by the<br>
+                                        the whole team, we’re excited to launch<br>
+                                        our closed beta. It’s easy to request<br>
+                                        an invite through the site ...
+                                   </p>
+                              </div>
+                         </li>
+                    </ul>
+               </div>
+          </section>
      </main>
 
+     <!-- FOOTER -->
      <script src="js/main.js"></script>
 </body>
 </html>
