--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <section class="articles">
                <div class="container articles__container">
                     <h3 class="articles__title">Latest Articles</h3>
-                    <ul class="articles__list">
+                    <ul class="articles__grid-list">
                          <li class="articles__item">
                               <img class="articles__img" src="img/Articles img1.png" alt="">
                               <div class="articles__inner">
@@ -166,6 +166,70 @@
      </main>
 
      <!-- FOOTER -->
+     <footer class="footer">
+          <div class="container footer__conatainer">
+               <div class="footer__inner">
+                    <img class="footer__logo" src="img/logo-white.svg" alt="" width="139" height="20">
+                    <ul class="footer__list-icons">
+                         <li class="footer__item-icons">
+                              <a class="footer__link-icon" href="#">
+                                   <img class="footer__icon" src="img/facebook.svg" alt="" width="20" height="20">
+                              </a>
+                         </li>
+                         <li class="footer__item-icons">
+                              <a class="footer__link-icon" href="#">
+                                   <img class="footer__icon" src="img/youtube.svg" alt="" width="20" height="20">
+                              </a>
+                         </li>
+                         <li class="footer__item-icons">
+                              <a class="footer__link-icon icon" href="#">
+                                   <img class="footer__icon" src="img/twitter.svg" alt="" width="20" height="20">
+                              </a>
+                         </li>
+                         <li class="footer__item-icons">
+                              <a class="footer__link-icon" href="#">
+                                   <img class="footer__icon" src="img/pinterest.svg" alt="" width="20" height="20">
+                              </a>
+                         </li>
+                         <li class="footer__item-icons">
+                              <a class="footer__link-icon" href="#">
+                                   <img class="footer__icon" src="img/instagram.svg" alt="" width="20" height="20">
+                              </a>
+                         </li>
+                    </ul>
+               </div>
+
+                    <ul class="footer__list">
+                              <li class="footer__item">
+                                   <a class="footer__link" href="#">About Us</a>
+                              </li>
+                              <li class="footer__item">
+                                   <a class="footer__link" href="#">Contact</a>
+                              </li>
+                              <li class="footer__item">
+                                   <a class="footer__link" href="#">Blog</a>
+                              </li>
+                    </ul>
+                         
+                    <ul class="footer__list">
+                         <li class="footer__item">
+                              <a class="footer__link" href="#">Careers</a>
+                         </li>
+                         <li class="footer__item">
+                              <a class="footer__link" href="#">Support</a>
+                         </li>
+                         <li class="footer__item">
+                              <a class="footer__link" href="#">Privacy Policy</a>
+                         </li>
+                    </ul>
+
+                    <div class="footer__button-wrapper">
+                         <a class="footer__button button" href="#">Request Invite</a>
+                         <p class="footer__info">© Easybank. All Rights Reserved</p>
+                    </div>
+          </div>
+     </footer>
+
      <script src="js/main.js"></script>
 </body>
 </html>
