--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
      <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+     <!-- Site Header -->
      <header class="site-header">
           <div class="container site-header__container">
                <img class="site-logo" src="img/easy bank logo.svg" alt="" width="139" height="20">
@@ -36,6 +37,73 @@
                <a class="button site-header__button" href="#">Request Invite</a>
           </div>
      </header>
+
+     <main class="main">
+          <section class="hero">
+               <div class="container hero__container">
+                    <div class="hero__inner">
+                         <h1 class="hero__title">Next generation<br>digital banking</h1>
+                         <p class="hero__info">Take your financial life online. Your Easybank account<br>
+                              will be a one-stop-shop for spending, saving,<br>
+                              budgeting, investing, and much more.
+                         </p>
+                    </div>
+                    <img class="hero__img" src="img/hero-phones-desktop.png" alt="" width="729" height="900">
+               </div>
+          </section>
+
+          <section class="features">
+               <div class="container features__container">
+                    <div class="features__inner">
+                         <h2 class="features__title">Why choose Easybank?</h2>
+                         <p class="features__text">We leverage Open Banking to turn your bank account into your financial hub.<br>
+                              Control your finances like never before.
+                         </p>
+                    </div>
+                    <ul class="features__list">
+                         <li class="features__item">
+                              <img class="features__icon" src="img/online-banking.svg" alt="" width="72" height="72">
+                              <a class="features__link" href="#">Online Banking</a>
+                              <p class="features__info">Our modern web and mobile<br>
+                                   applications allow you to keep<br>
+                                   track of your finances wherever<br>
+                                   you are in the world.
+                              </p>
+                         </li>
+
+                         <li class="features__item">
+                              <img class="features__icon" src="img/Simple Budgeting.svg" alt="" width="72" height="72">
+                              <a class="features__link" href="#">Simple Budgeting</a>
+                              <p class="features__info">See exactly where your money<br>
+                                   goes each month. Receive<br>
+                                   notifications when you’re close to<br>
+                                   hitting your limits.
+                              </p>
+                         </li>
+
+                         <li class="features__item">
+                              <img class="features__icon" src="img/Fast Onboarding.svg" alt="" width="72" height="72">
+                              <a class="features__link" href="#">Fast Onboarding</a>
+                              <p class="features__info">We don’t do branches. Open your<br>
+                                   account in minutes online and start<br>
+                                   taking control of your finances<br>
+                                   right away.
+                              </p>
+                         </li>
+
+                         <li class="features__item">
+                              <img class="features__icon" src="img/Open API.svg" alt="" width="72" height="72">
+                              <a class="features__link" href="#">Open API</a>
+                              <p class="features__info">Manage your savings, investments,<br>
+                                   pension, and much more from one<br>
+                                   account. Tracking your money has<br>
+                                   never been easier.
+                              </p>
+                         </li>
+                    </ul>
+               </div>
+          </section>
+     </main>
 
      <script src="js/main.js"></script>
 </body>
